--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -1,3 +1,6 @@
+
+node_modules
+
 # Logs
 logs
 *.log
@@ -11,7 +14,6 @@ node_modules
 dist
 dist-ssr
 *.local
-*.env
 
 # Editor directories and files
 .vscode/*
@@ -24,4 +26,7 @@ dist-ssr
 *.sln
 *.sw?
 
-.vercel
+node_modules
+
+*.env
+
